# exa-foo-fighting-service

./: .pre-commit-config.yaml  README.md  app_configuration.json  octue.yaml  pyproject.toml  setup.cfg  twine.json
.devcontainer/: Dockerfile  devcontainer.json
.gcloud/cloud-run/: Dockerfile
.github/workflows/: cd.yml  ci.yml  release.yml  semantic.yml
exa_foo_fighting_service/: app.py  mandelbrot.py
exa_mandelbrot_service/: app.py  mandelbrot.py
tests/: test_app.py  test_deployment.py
