[tool.poetry]
name = "exa-mandelbrot-service"
version = "0.1.0"
description = ""
authors = ["Marcus Lugg <cortado.codes@protonmail.com>"]
readme = "README.md"
packages = [{include = "exa_mandelbrot_service"}]

[tool.poetry.dependencies]
python = "^3.10"
octue = "^0.41.1"
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
plotly = "^5.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
