[tool.poetry]
name = "exa-foo-fighting-service"
version = "0.1.2"
description = ""
authors = ["Marcus Lugg <cortado.codes@protonmail.com>"]
readme = "README.md"
packages = [{include = "exa_foo_fighting_service"}]

[tool.poetry.dependencies]
python = "^3.9"
octue = { git = "https://github.com/octue/octue-sdk-python", rev = "fix/fix-non-returning-cloud-run-services"}
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
plotly = "^5.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
